--- a/MyApplication3/app/src/main/res/layout/activity_contact.xml
+++ b/MyApplication3/app/src/main/res/layout/activity_contact.xml
@@ -90,7 +90,9 @@
         android:id="@+id/button"
         android:layout_width="184dp"
         android:layout_height="67dp"
+        android:background="@color/design_default_color_primary_variant"
         android:text="Button"
+        android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
