--- a/MyApplication3/app/src/main/res/layout/activity_home.xml
+++ b/MyApplication3/app/src/main/res/layout/activity_home.xml
@@ -36,7 +36,7 @@
         app:layout_constraintVertical_bias="0.294" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnContact"
         android:layout_width="208dp"
         android:layout_height="44dp"
         android:layout_marginBottom="44dp"
