--- a/MyApplication3/app/src/main/res/values/themes.xml
+++ b/MyApplication3/app/src/main/res/values/themes.xml
@@ -1,5 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.MyApplication" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.MyApplication" parent="Theme.MaterialComponents.DayNight.NoActionBar" >
+
+        <item name="colorPrimary">@color/purple_200</item>
+        <item name="colorPrimaryVariant">@color/purple_500</item>
+        <item name="colorOnPrimary">@color/teal_200</item>
+
+        <item name="colorSecondary">@color/white</item>
+
+        <item name="colorSecondaryVariant">@color/black</item>
+        <item name="colorOnSecondary">@color/home</item>
+
+<!--        <color name="purple_200">#FFBB86FC</color>-->
+<!--        <color name="purple_500">#FF6200EE</color>-->
+<!--        <color name="purple_700">#FF3700B3</color>-->
+<!--        <color name="teal_200">#FF03DAC5</color>-->
+<!--        <color name="teal_700">#FF018786</color>-->
+<!--        <color name="black">#FF000000</color>-->
+<!--        <color name="white">#FFFFFFFF</color>-->
+<!--        <color name="home">#EA1717</color>-->
+
+    </style>
 </resources>
