--- a/MyApplication3/app/src/main/res/values/themes.xml
+++ b/MyApplication3/app/src/main/res/values/themes.xml
@@ -3,7 +3,7 @@
 
     <style name="Theme.MyApplication" parent="Theme.MaterialComponents.DayNight.NoActionBar" >
 
-        <item name="colorPrimary">@color/purple_200</item>
+        <item name="colorPrimary">@color/teal_700</item>
         <item name="colorPrimaryVariant">@color/purple_500</item>
         <item name="colorOnPrimary">@color/teal_200</item>
 
@@ -11,6 +11,8 @@
 
         <item name="colorSecondaryVariant">@color/black</item>
         <item name="colorOnSecondary">@color/home</item>
+
+
 
 <!--        <color name="purple_200">#FFBB86FC</color>-->
 <!--        <color name="purple_500">#FF6200EE</color>-->
